# tatort-checker

./: main.py  pyproject.toml  shell.nix
