[tool.poetry]
name = "tatort-checker"
version = "0.1.0"
description = "Checks if new Tatort episodes have subtitles available for them"
authors = ["Andriy Mykhaylyk <erp.lsf@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
